added processing logic for one-off jobs
